fixed bug when page hits 465px elements were getting resized when really they should have been resizing at 450px, this is because the width of the document body doesnt account for the scrollbar width, which was throwing off my media queries. instead of fixing my javascript I just changed my media queries to break at 465px instead of 450px

--- a/src/Styles/add-payment-method-form.scss
+++ b/src/Styles/add-payment-method-form.scss
@@ -4,7 +4,7 @@
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 465px) {
   .add-payment-header {
     height: 35px;
   }
