--- a/src/Styles/add-shipping-address-form.scss
+++ b/src/Styles/add-shipping-address-form.scss
@@ -4,7 +4,7 @@
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 465px) {
   .add-shipping-header {
     height: 35px;
   }
