--- a/src/Styles/checkout.scss
+++ b/src/Styles/checkout.scss
@@ -402,7 +402,7 @@
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 465px) {
   .checkout-wrapper {
     padding: 0 20px;
   }
