--- a/src/Styles/choose-payment-method.scss
+++ b/src/Styles/choose-payment-method.scss
@@ -4,7 +4,7 @@
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 465px) {
   .choose-payment-method-header {
     // font-size: 13px;
     height: 35px;
