--- a/src/Styles/choose-shipping-address.scss
+++ b/src/Styles/choose-shipping-address.scss
@@ -4,7 +4,7 @@
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 465px) {
   .shipping-toggle-header {
     height: 35px;
   }
