--- a/src/Styles/contact-info-form.scss
+++ b/src/Styles/contact-info-form.scss
@@ -4,7 +4,7 @@
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 465px) {
   .contact-info-form-header {
     height: 35px;
   }
